--- a/templates/index.html
+++ b/templates/index.html
@@ -127,6 +127,7 @@
         n8: "M 5.4338908,-16.6 V -1.8003873 C 4.6886389,-2.4541726 3.2417147,-2.5473266 1.9627951,-2.0070799 0.39379181,-1.3442932 -0.327524,0.02060076 0.14119185,1.1301831 0.6099212,2.2397925 2.0913585,2.6740522 3.6603622,2.0112715 5.1558693,1.3795268 6.1879268,-0.02035624 5.8757185,-1.1110165 V -11.4835 c 0.7995708,0.12909 1.557102,0.555569 2.1296048,1.140487 1.0928906,1.1165914 1.806366,2.8096629 1.4691519,4.6906652 -0.2430701,1.3558561 -0.6764867,2.2088728 -1.1115675,3.2866248 l 0.3126581,-0.03307 C 9.3009879,-3.813072 10.340258,-5.8140058 10.069258,-7.912154 9.8180499,-9.8570773 8.4631133,-11.21149 7.5820958,-12.311382 6.6707994,-13.449073 5.9883781,-14.192491 5.820447,-16.579847 Z",
         n16: "m 5.8757159,-17 -0.4418278,0.0037 V -1.7491779 C 4.6886363,-2.4029626 3.2417359,-2.4961226 1.9627929,-1.9558699 0.39378731,-1.2930892 -0.32751977,0.07182176 0.14118955,1.1814041 0.60992544,2.2910125 2.091354,2.7252732 3.6603596,2.0624925 5.155864,1.4307471 6.1878977,0.03083776 5.8757159,-1.0598065 v -8.1788231 c 0.6857206,0.4981049 1.5967868,1.0480096 2.264992,1.5523636 0.928423,0.7007697 1.5545065,1.3378155 1.8096971,2.4509929 0.223626,0.9755743 0.010319,2.5361624 -0.6604264,3.9842529 l 0.2620168,0.0032 C 10.129978,-2.5094576 10.499495,-3.338105 10.402075,-5.0899631 10.370854,-5.6511448 10.209168,-6.1904445 9.9586865,-6.7095042 10.600804,-9.1061786 10.15387,-10.815102 7.7071352,-13.587138 7.1339154,-14.236563 5.8757159,-14.846502 5.8757159,-16.999841 Z m 0.00873,3.581693 c 0.7617631,0.488606 1.7915214,1.233406 2.3430189,1.895503 0.9716029,1.166466 1.7142883,1.9997744 1.4521127,4.3005113 C 9.129985,-8.1299987 8.333695,-8.9734904 7.5153652,-9.7606523 6.9207671,-10.332602 5.9734,-11.604164 5.8844471,-13.418307 Z",
         n32: "M 5.4343723,-20.996415 V -1.7800232 C 4.6892792,-2.434258 3.2425111,-2.527635 1.9632758,-1.9872443 0.39427018,-1.3244425 -0.32759253,0.04040676 0.1411433,1.1500161 0.60985268,2.2595982 2.0913341,2.6933832 3.6603146,2.0306015 5.1551046,1.3991478 6.1869532,7.9876e-4 5.8762,-1.0896195 V -9.270002 c 0.6856942,0.4981146 1.5967869,1.0480034 2.2649921,1.552354 0.9283965,0.7007458 1.5545065,1.3378415 1.8096971,2.4510199 0.2236258,0.9755734 0.010319,2.5361885 -0.6604,3.9842516 l 0.2619904,0.0032 c 0.5779554,-1.2616101 0.9475254,-2.0903378 0.8500794,-3.84217 -0.03122,-0.5613927 -0.193251,-1.1007984 -0.4439175,-1.6200431 0.3552825,-1.326339 0.3736445,-2.4436684 -0.093001,-3.6452594 0.7691965,-2.569648 0.3967425,-4.306133 -2.1580211,-7.2006 C 7.1343996,-18.236679 5.8762,-18.846611 5.8762,-21 Z M 5.8762,-17.42403 c 0.7625292,0.488517 1.7978438,1.236732 2.3512727,1.901178 1.0158942,1.21964 1.7831593,2.072745 1.411314,4.622459 C 9.2344505,-11.720838 8.6095575,-12.596725 7.7076194,-13.618576 7.1343996,-14.268004 5.8762,-14.877938 5.8762,-17.031287 Z m 0.00873,3.974438 c 0.7617367,0.488612 1.7910188,1.233404 2.3424898,1.895492 0.9716294,1.166501 1.7148175,1.9998033 1.4526419,4.3005047 C 9.1304957,-8.1612716 8.3341792,-9.004771 7.5158494,-9.7919327 6.9212513,-10.363884 5.9738842,-11.635464 5.8849313,-13.449592 Z",
+        n1r: "m 3.6054982,-2.3495445 c -0.5339291,0.010054 -1.1032341,0.12319 -1.6425873,0.3509963 C 0.39390532,-1.3357669 -0.32753406,0.02903329 0.14117542,1.1386159 0.60991115,2.2482255 2.0913132,2.6825126 3.6603199,2.0197313 5.2293255,1.3569236 6.2918128,-0.15196811 5.823077,-1.2615513 5.5154989,-1.9896582 4.6248585,-2.3649433 3.6054982,-2.3495445 Z m 0.7519723,0.8264791 c 0.4186502,0 0.7199842,0.1121039 0.8549746,0.3146954 C 5.5427245,-0.71246151 4.8118924,0.19243999 3.5800982,0.81283449 2.348303,1.4332295 1.0820072,1.5341151 0.75172782,1.0383388 0.42144844,0.54243029 1.1522541,-0.36247061 2.3840747,-0.98286561 3.0647164,-1.3256598 3.7914474,-1.5245471 4.3574705,-1.5230654 Z",
         n2r: "m 3.6887018,-2.0997399 c -0.4449763,0.00571 -0.9272059,0.1055238 -1.4175052,0.3126422 -1.49550441,0.6317271 -2.52753811,2.031627 -2.21535623,3.1222889 V 16.708935 l 0.44182765,0.115227 V 2.0230074 C 0.92864781,2.4016261 1.5937839,2.5948249 2.3264945,2.582654 2.8604501,2.5739228 3.4294366,2.4590936 3.9687897,2.2312609 5.5377689,1.5684797 6.2590759,0.2041195 5.7903666,-0.9054981 5.4681041,-1.6684029 4.6676336,-2.1123129 3.6887018,-2.0997399 Z m 0.7761816,0.9839166 c 0.335915,0.022172 0.5913702,0.1241346 0.7151952,0.3100599 0.3303059,0.495898 -0.400632,1.4012537 -1.6324527,2.0215799 -0.680667,0.3427942 -1.4075039,0.5408877 -1.973527,0.5400146 -0.4186503,0 -0.71977255,-0.1120775 -0.8547365,-0.3146954 C 0.38905656,0.9452589 1.1200209,0.0404561 2.3518151,-0.5799362 3.1216997,-0.9676857 3.9049986,-1.1527776 4.4648834,-1.1158233 Z",
         n4r: "m 3.688244,-2.1164021 c -0.4449762,0.00577 -0.9266502,0.1055264 -1.4169755,0.3126316 -1.49476351,0.6313594 -2.52661192,2.03030666 -2.21588526,3.1207339 V 16.691746 l 0.44185404,0.115755 V 2.006838 C 1.2423304,2.6610732 2.6890715,2.7549844 3.968332,2.2145888 5.5373376,1.5517917 6.2591738,0.18693066 5.790438,-0.92268148 5.468202,-1.6855255 4.6672024,-2.1290809 3.688244,-2.1164021 Z",
         n8r: "m 2.2708775,-1.7870966 c -1.54085398,0.650875 -2.58950357,2.11709 -2.1828126,3.2204562 V 16.824143 l 0.38652987,-0.02011 C 0.64252581,14.416673 1.3249656,13.673249 2.2362435,12.535567 3.117252,11.435668 4.4722097,10.081266 4.7234316,8.13634 4.9944443,6.0381944 3.9546318,4.0372565 3.3292097,2.6229792 L 3.0170808,2.5899063 C 3.4521352,3.66766 3.8855491,4.5206767 4.1286483,5.876534 4.4658597,7.7575363 3.7523579,9.450605 2.65947,10.5672 2.0869921,11.152114 1.3294635,11.578596 0.52989268,11.707713 V 2.0509236 C 1.2839287,2.6801027 2.707386,2.7639756 3.9684431,2.23129 5.5374487,1.5685088 6.2587558,0.2035755 5.79002,-0.9060076 5.4677839,-1.6688543 4.6667843,-2.112333 3.687826,-2.0997388 c -0.4449763,0.00571 -0.9266502,0.1055211 -1.4169485,0.3126422 z",
@@ -152,7 +153,7 @@
         loc: null
     };
 
-    function tmmMenuButtonClick(e) {
+    function tmmMenuButtonClick(e, paper) {
         let sender = e.currentTarget;
 
         let isAcc = sender.classList.contains('acc-btn');
@@ -196,7 +197,20 @@
                 document.querySelectorAll('.dur-btn').forEach((button) => {
                     button.classList.remove('clicked');
                 });
+
                 mParams.duration = sender.getAttribute('data-dur-val');
+
+                mParams.ghostNote.symbol = paper.path(symbols[mParams.duration]);
+                mParams.ghostNote.symbolR = paper.path(symbols[mParams.duration + "r"]);
+                mParams.ghostNote.symbol.attr({
+                    fill: 'transparent'
+                });
+                mParams.ghostNote.symbolR.attr({
+                    fill: 'transparent'
+                });
+                mParams.ghostNote.symbol.addClass('no-print');
+                mParams.ghostNote.symbolR.addClass('no-print');
+
             }
 
             if (isDot) {
@@ -230,6 +244,17 @@
                     button.classList.remove('clicked');
                 });
                 mParams.rest = sender.getAttribute('data-rest-val');
+
+                mParams.ghostNote.symbol = paper.path(symbols[mParams.rest]);
+                mParams.ghostNote.symbolR = paper.path(symbols[mParams.rest]); // TODO: fix this also calculate ghost rest pos
+                mParams.ghostNote.symbol.attr({
+                    fill: 'transparent'
+                });
+                mParams.ghostNote.symbolR.attr({
+                    fill: 'transparent'
+                });
+                mParams.ghostNote.symbol.addClass('no-print');
+                mParams.ghostNote.symbolR.addClass('no-print');
             }
 
             if (isLoc) {
@@ -306,7 +331,7 @@
         mParams.usul.meter = meter.slice();
     }
 
-    function createTMMMenu(containerSelector) {
+    function createTMMMenu(containerSelector, paper) {
         let tabIndex = 1;
         let tmmMakams = [
             {name: "Do Majör", accidentals: []},
@@ -502,12 +527,14 @@
         scoreMenu.appendChild(dvGroupRests);
         scoreMenu.appendChild(dvGroupLocs);
 
-        document.querySelector(containerSelector).append(scoreMenu);
+        document.querySelector(containerSelector).prepend(scoreMenu);
 
 
         let tmmMenuButtons = document.querySelectorAll('.tmm-menu-btn');
         for (let tmmMenuButton of tmmMenuButtons) {
-            tmmMenuButton.addEventListener('click', tmmMenuButtonClick);
+            tmmMenuButton.addEventListener('click', function (e) {
+                tmmMenuButtonClick(e, paper);
+            });
         }
 
         document.querySelector('[data-dur-val="n4"]').click();
@@ -1234,8 +1261,6 @@
             scorePaperWidth = windowWidth - 50;
         }
 
-        createTMMMenu(containerSelector);
-
         let svgElem = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
         let svgID = 'svg-tmm-score';
         svgElem.setAttribute('id', svgID);
@@ -1246,6 +1271,8 @@
         document.querySelector(containerSelector).append(svgElem);
 
         let paper = Snap('#' + svgID);
+
+        createTMMMenu(containerSelector, paper);
         // eof prep work
 
         let measures = [];
@@ -1310,16 +1337,6 @@
 
             svgElem.style.height = (configs.padding.top + configs.padding.bottom) + (numOfReqLines * 17 * configs.porteLineHeight) + 'px';
             // eof satir objects
-            mParams.ghostNote.symbol = paper.path(symbols.n4);
-            mParams.ghostNote.symbolR = paper.path(symbols.n4r);
-            mParams.ghostNote.symbol.attr({
-                fill: 'transparent'
-            });
-            mParams.ghostNote.symbolR.attr({
-                fill: 'transparent'
-            });
-            mParams.ghostNote.symbol.addClass('no-print');
-            mParams.ghostNote.symbolR.addClass('no-print');
         };
 
         this.drawScore = function () {
